--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_sign_in">Connexion</string>
 
     <string name="balance">Balance :</string>
+    <string name="unknown_user">Utilisateur inconnu</string>
     <string name="failed">Echec</string>
     <string name="no_account">Pas de compte</string>
     <string name="disconnect">Déconnexion</string>
